# Disertatie

./: .gitignore
UpdateApi/tutorial/: db.sqlite3
UpdateApi/tutorial/quickstart/: models.py  views.py
UpdateApi/tutorial/tutorial/: settings.py  urls.py
doc/: .~lock.Disertatie_II_2020-11-2-1.odt#  Disertatie-Ion_1.odt  Disertatie_II_2020-1(1).odt  Disertatie_II_2020-1.odt  Disertatie_II_2020.odt  biblio
doc/src/: references.bib  sds.tex  test.fdb_latexmk  test.fls  thesis.aux  thesis.bbl  thesis.blg  thesis.brf  thesis.out  thesis.tex  thesis.toc  tuiasithesis.sty
doc/src/chapters/: abstract.tex  appendix_a.tex  introduction.tex  latex_essentials.tex  titlepage.tex  titlepage.vscodeLog  titlepage_en.tex
doc/src/custom_chapters/: anexa_capitolul_4_A.tex  anexa_capitolul_4_B.tex  capitolul_2.tex  capitolul_3.tex  capitolul_4.tex  capitolul_5.tex  concluzie.tex  declaratie.tex  introducere.tex  rezumat.tex
gateway/: .gitignore  CMakeLists.txt  Makefile  backtrace  partitions.csv  sdkconfig  sdkconfig.old
gateway/HttpClient/: HttpClient.cpp  HttpClient.h
gateway/SWL_Gateway/: SWL_Gateway.cpp  SWL_Gateway.h  SWL_Gateway_cfg.h
gateway/SWL_Gateway/FlashDevice/: FlashDevice.cpp  FlashDevice.h  FlashDevice_cfg.h
gateway/SWL_Gateway/FlashDeviceManager/: FlashDeviceManager.cpp  FlashDeviceManager.h
gateway/SWL_Gateway/FlashingService/: FlashingService.cpp  FlashingService.h
gateway/SWL_Gateway/SwlOled/: SwlOled.cpp  SwlOled.h
gateway/SWL_Gateway/UpdateFileApp/: UpdateFileApp.cpp  UpdateFileApp.h
gateway/SWL_Gateway/VersionManager/: VersionManager.cpp  VersionManager.h
gateway/Ssd1306/: i2c.cpp  ssd1306.cpp  ssd1306.hpp
gateway/ble/: BleAdapter.cpp  BleAdapter.h  BleAdapter_cfg.h  Observer.cpp  Observer.h
gateway/ble/advertising/: GapAdapter.cpp  GapAdapter.h  GapAdapter_cfg.h
gateway/ble/ble_device/: BleRemoteDevice.cpp  BleRemoteDevice.h  BleRemoteDevice_cfg.h
gateway/ble/gatt_client/: GattClient.cpp  GattClient.h
gateway/ble/gatt_server/: GattServer.cpp  GattServer.h
gateway/ble/gatt_service/: GattService.cpp  GattService.h  GattServiceClient.cpp  GattServiceClient.h  GattServiceServer.cpp  GattServiceServer.h
gateway/etl/: absolute.h  algorithm.h  alignment.h  array.h  array_view.h  array_wrapper.h  atomic.h  basic_format_spec.h  basic_string.h  binary.h  bit_stream.h  bitset.h  bloom_filter.h  callback_service.h  callback_timer.h  char_traits.h  checksum.h  combinations.h  compare.h  constant.h  container.h  crc16.h  crc16_ccitt.h  crc16_kermit.h  crc16_modbus.h  crc32.h  crc32_c.h  crc64_ecma.h  crc8_ccitt.h  cstring.h  cumulative_moving_average.h  cyclic_value.h  debounce.h  debug_count.h  delegate.h  delegate_service.h  deque.h  endianness.h  enum_type.h  error_handler.h  (+128 more)
gateway/etl/atomic/: atomic_arm.h  atomic_gcc_sync.h  atomic_llvm_sync.h  atomic_std.h
gateway/etl/c/: ecl_timer.h
gateway/etl/deprecated/: factory.h
gateway/etl/experimental/: atomic.h
gateway/etl/mutex/: mutex_arm.h  mutex_gcc_sync.h  mutex_std.h
gateway/etl/private/: ivectorpointer.h  minmax_pop.h  minmax_push.h  pvoidvector.h  to_string_helper.h  vector_base.h
gateway/etl/profiles/: arduino_arm.h  armv5.h  armv5_no_stl.h  armv6.h  armv6_no_stl.h  clang_generic.h  cpp03.h  cpp03_no_stl.h  cpp11.h  cpp11_no_stl.h  cpp14.h  cpp14_no_stl.h  cpp17.h  cpp17_no_stl.h  etl_profile.h  gcc_generic.h  gcc_linux_x86.h  gcc_windows_x86.h  msvc_x86.h  segger_gcc_stlport.h  ticc.h
gateway/etl/stl/: algorithm.h  functional.h  iterator.h  limits.h  utility.h
gateway/main/: CMakeLists.txt  component.mk  custom_profile.h  gateway_main.cpp
gateway/nvs_adapter/: NvsAdapter.cpp  NvsAdapter.h
gateway/sdcard/: sdcard.cpp  sdcard.h
gateway/wifi/: WifiAdapter.cpp  WifiAdapter.h  WifiAdapter_config.h
node/: .cproject  CMakeLists.txt  sdkconfig  sdkconfig.old
node/SWLoad/: SWLoad.cpp  SWLoad.h  SWLoad_cfg.h
node/SWLoad/FlashDevice/: FlashDevice.cpp  FlashDevice.h
node/SWLoad/FlashDeviceManager/: FlashDeviceManager.cpp  FlashDeviceManager.h
node/SWLoad/FlashingService/: FlashingService.cpp  FlashingService.h
node/ble/: BleAdapter.h  BleAdapter_cfg.h
node/ble/advertising/: GapAdapter.cpp  GapAdapter.h  GapAdapter_cfg.h
node/ble/gatt_client/: GattClient.cpp
node/etl/: fsm.h  message_router.h  platform.h
node/main/: CMakeLists.txt  component.mk  node_main.cpp
node/nvs_adapter/: NvsAdapter.cpp  NvsAdapter.h
(+17 files in other folders)
