idf_component_register(SRCS "gateway_main.cpp" 
							"../wifi/WifiAdapter.cpp" 
							"../nvs_adapter/NvsAdapter.cpp" 
							"../ble/Observer.cpp" 
							"../ble/BleAdapter.cpp"
							"../ble/advertising/GapAdapter.cpp" 
							"../ble/ble_device/BleRemoteDevice.cpp" 
							"../ble/gatt_client/GattClient.cpp" 
							"../ble/gatt_server/GattServer.cpp" 
							"../ble/gatt_service/GattService.cpp" 
							"../ble/gatt_service/GattServiceClient.cpp" 
							"../ble/gatt_service/GattServiceServer.cpp" 
							"../SWL_Gateway/FlashDevice/FlashDevice.cpp" 
							"../SWL_Gateway/FlashingService/FlashingService.cpp"  
							"../SWL_Gateway/FlashDeviceManager/FlashDeviceManager.cpp" 
							"../SWL_Gateway/SWL_Gateway.cpp"
							"../HttpClient/HttpClient.cpp"
					INCLUDE_DIRS 
					"../wifi/"
					"../nvs_adapter/"
					"../ble/"
					"../ble/advertising/"
					"../ble/ble_device/"
					"../ble/gatt_client/"
					"../ble/gatt_server/"
					"../ble/gatt_service/"
					"../SWL_Gateway/FlashDevice/"
					"../SWL_Gateway/FlashingService/"
					"../SWL_Gateway/FlashDeviceManager/"
					"../SWL_Gateway/"
					"../HttpClient/HttpClient"
)
component_compile_options(-std=c++17)