idf_component_register(SRCS "gateway_main.cpp" 
							"../wifi/WifiAdapter.cpp" 
							"../nvs_adapter/NvsAdapter.cpp" 
							"../ble/BleAdapter.cpp"
							"../ble/advertising/GapAdapter.cpp" 
							"../ble/ble_device/BleRemoteDevice.cpp" 
							"../ble/gatt_client/GattClient.cpp" 
							"../ble/gatt_server/GattServer.cpp" 
							"../ble/gatt_service/GattService.cpp" 
							"../ble/gatt_service/GattServiceClient.cpp" 
							"../ble/gatt_service/GattServiceServer.cpp" 
							"../SWL_Gateway/FlashDevice/FlashDevice.cpp" 
							"../SWL_Gateway/FlashDeviceManager/FlashDeviceManager.cpp" 
							"../SWL_Gateway/SWL_Gateway.cpp"
							"../HttpClient/HttpClient.cpp"
							"../sdcard/sdcard.cpp"
							"../SWL_Gateway/UpdateFileApp/UpdateFileApp.cpp"
							"../SWL_Gateway/VersionManager/VersionManager.cpp"
							"../SWL_Gateway/FlashDevice/FlashStateMachine/FlashStates.cpp"
					INCLUDE_DIRS 
					"../etl"
					"../wifi/"
					"../nvs_adapter/"
					"../ble/"
					"../ble/advertising/"
					"../ble/ble_device/"
					"../ble/gatt_client/"
					"../ble/gatt_server/"
					"../ble/gatt_service/"
					"../SWL_Gateway/FlashDevice/"
					"../SWL_Gateway/FlashDevice/FlashStateMachine/"
					"../SWL_Gateway/FlashDeviceManager/"
					"../SWL_Gateway/"
					"../HttpClient/"
					"../sdcard/"
					"../SWL_Gateway/UpdateFileApp"
					"../SWL_Gateway/VersionManager"
	
)
component_compile_options(-std=c++17)