idf_component_register(SRCS "node_main.cpp" 
							"../nvs_adapter/NvsAdapter.cpp" 
							"../ble/BleAdapter.cpp"
							"../ble/advertising/GapAdapter.cpp" 
							"../ble/ble_device/BleRemoteDevice.cpp" 
							"../ble/gatt_client/GattClient.cpp" 
							"../ble/gatt_server/GattServer.cpp" 
							"../ble/gatt_service/GattService.cpp" 
							"../ble/gatt_service/GattServiceClient.cpp" 
							"../ble/gatt_service/GattServiceServer.cpp"
							"../SWLoad/FlashDevice/FlashDevice.cpp"
							"../SWLoad/SWLoad.cpp"
							"../SWLoad/FlashDevice/FlashStateMachine/FlashStates.cpp"
							"../ota_adapter/OtaAdapter.cpp"
					INCLUDE_DIRS 
					"../etl" 
                    "../nvs_adapter/" 
                    "../ble/"
					"../ble/advertising/"
					"../ble/ble_device/"
					"../ble/gatt_client/"
					"../ble/gatt_server/"
					"../ble/gatt_service/" 
					"../SWLoad/FlashDevice/"
					"../SWLoad/"
					"../SWLoad/FlashDevice/FlashStateMachine"
					"../ota_adapter/"
)
component_compile_options(-std=c++17)